# Tic-Tac-Toe-lv3

./: CMakeLists.txt  LICENSE  Property-based-Test.cpp
src/: main.cpp
src/core/: bot_pure.cpp  bot_pure.h  logic.cpp  logic.h  parallel.cpp
src/shell/: engine.cpp  engine.h
src/terminal/: interaction.cpp  interaction.h  renderer.cpp  renderer.h
src/utils/: config.h
